compiler/src/test/resources/golden/errors/type_tuple_arity.dawn
fn f(p: (Int, Int)) -> Int =
  match p {
    (a, b, c) -> a
  }
